--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@parse/react": "^0.0.1-alpha.18",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
         "emitter": "^0.0.5",
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.29.4",
+        "parse": "^3.4.4",
         "react": "^18.2.0",
         "react-bootstrap": "^2.5.0",
         "react-dom": "^18.2.0",
